--- a/Task1.html
+++ b/Task1.html
@@ -6,7 +6,8 @@
     <title>Block and Inline Element Example</title>
 </head>
 <body>
-  <h1>My Sample Webpage</h1>     
+  <h1>My Sample Webpage</h1>  
+  <p>hello World</p>   
   <p>This is a paragraph showing both block and inline elements.</p> 
   <div>Hello,My name is Keerthi Ranjith.</div>
   <div>I am from tambaram ,Chennai.</div>
