--- a/Day 3/Task1.html
+++ b/Day 3/Task1.html
@@ -11,6 +11,7 @@
         <h1>Summary</h1>
         <P>"Motivated learner exploring full stack development.Skilled in creating structured webpages and small applications.Focused on improving abilities and gaining practical experience in IT.</P>
     </header>
+    <hr>
     <nav>
         <ul>
             <li><a href="#About Me">About me</a></li>
@@ -19,19 +20,20 @@
             <li><a href="#Projects">Projects</a></li>
         </ul>
     </nav>
-
+    <hr>
     <main>  
-        <section>
+        <section id="About Me">
             <h2>About Me</h2>
             <p>I am Keerthi Ranjith and I'm from tambaram ,chennai.I enjoy solving challenging problems and collaborating with others to achieve project goals efficiently.Aspiring Full Stack Developer with a passion for coding and IT.</p>
 
         </section>
-        <section>
+        <hr>
+        <section id="Education">
             <h2>Education</h2>
             <p>I have a chemistry background but I am now learning full stack development. I love exploring new technologies and growing my skills in IT.My goal is to grow in the IT field,contribute to meaningful projects,and help my organization achieve success while continuously improving myself.</p> 
         </section>
-             
-        <section>
+        <hr>
+        <section id="Skills">
             <h2>Skills</h2>
             <ul>
                 <li>HTML & CSS:Build structured and responsive webpage using sematic HTML and styling.</li>
@@ -39,8 +41,8 @@
                 <li>React and Node.js:Practiced building frontend and backend components for small projects.</li>
             </ul>
         </section>
-
-        <section>
+        <hr>
+        <section id="Projects">
             <h2>Projects</h2>
             <ul>
                 <li><a href="https://github.com/keerthiranjith81-byte/Assignment.git"target=_"blank">Project 1 - Simple Webpage</a></li>
@@ -48,15 +50,16 @@
                 <li><a href="#">Project 2 - Portfolio Website</a></li>
                 <p>"Developed a personal portfolio webpage using sematic HTML to showcase my skills and projects professionally."</p>
             </ul>
+
         </section>
     </main>
-
+    <hr>
     <aside>
         <h2>Contact Me</h2>
         <p>Email: keerthiranjith81@gmail.com</p>
         <p>Phone:+91 6383885006</p>
     </aside>
-
+    <hr>
     <footer>
         <p>&copy; 2025 Keerthi Ranjith. All rights reserved.</p>
     </footer>
