--- a/Day 4/Task2.html
+++ b/Day 4/Task2.html
@@ -23,14 +23,14 @@
             <label for="bdate">Date of Brith:</label>
             <input type="date" id="bdate" name="bdate" required>
             <label for="age">Age:</label>
-            <input type="age" id="age" name="age" placeholder="23 years">
+            <input type="number" id="age" name="age" placeholder="23 years">
 
         </div>
         <br>
         <div>
             <label for="gender">Gender:</label>
-            <input type="radio" id="gender" name="gender">Male
-            <input type="radio" name="gender" id="gender">Female
+            <input type="radio" name="gender">Male
+            <input type="radio" name="gender">Female
         </div>
         <br>
         <div>
@@ -48,7 +48,7 @@
         <br>
         <div>
             <label for="id no">Aadhaar no:</label>
-            <input type="text" id="id no" name="id no" placeholder="3664 3564 3568">
+            <input type="number" id="id no" name="id no" placeholder="3664 3564 3568">
         </div>
         <br>
         <hr>
@@ -59,24 +59,24 @@
             <label for="email">Email id:</label>
             <input type="email" id="email" name="email" placeholder="keerthiranjith81@gmail.com" required>
             <label for="phone">Phone no :</label>
-            <input type="tel" id="phone" name="phone" placeholder="(+91)6383885006" required>
+            <input type="number" id="phone" name="phone" placeholder="(+91)6383885006" required>
         </div> 
         <br>
         <div>
             <label for="address">Address:</label>
-            <input type="address" id="address" name="address" placeholder="Door no - 263">
+            <input type="text" id="address" name="address" placeholder="Door no - 263">
             <label for="street">Street name:</label>
-            <input type="street" id="street" name="street" placeholder="Anna nagar">
+            <input type="text" id="street" name="street" placeholder="Anna nagar">
            
         </div>
         <br>
         <div>
             <label for="city">City:</label>
-            <input type="city" id="city" name="city" placeholder="chennai">
+            <input type="text" id="city" name="city" placeholder="chennai">
             <label for="state">State:</label>
             <input type="text" name="state" id="state">
             <label for="pincode">Pincode:</label>
-            <input type="pincode" id="pincode" name="pincode" placeholder="600037">
+            <input type="number" id="pincode" name="pincode" placeholder="600037">
         </div>
         <br>
         <hr>
@@ -85,7 +85,7 @@
             <label for="qualification"> Higher Qualification:</label>
             <input type="text" id="qualification" name="qualifiaction" placeholder="B.Sc.Chemistry" required> 
             <label for="passedout year">Year of passedout:</label>
-            <input type="text" id="passedout year" name="passedout year" placeholder="2023" required>
+            <input type="number" id="passedout year" name="passedout year" placeholder="2023" required>
         </div>
         <br>
         <div>
