--- a/Day 5/Task3.html
+++ b/Day 5/Task3.html
@@ -20,6 +20,9 @@
     <center>
         <img src="https://images.pexels.com/photos/4262325/pexels-photo-4262325.jpeg" width="600" height="600" title="A cute puppies(Aarthi & Keerthi)">
     </center>
+    <center>
+        <img src="https://images.pexels.com/photos/47547/squirrel-animal-cute-rodents-47547.jpeg" title="A littil squirrel." width="600">
+    </center>
 
     
 </body>
