--- a/Day 6/Task6.html
+++ b/Day 6/Task6.html
@@ -12,7 +12,7 @@
         <h1><U>REGISTRATION FORM</U></h1>
     </Div>
 
-    <form action="action_page.php" method="post">
+    <form action="action_page.php" method="get">
         <fieldset>
             <legend><strong>PERSONAL INFORMATION</strong></legend><br>
             <label for="fname">First name:</label>
