--- a/Day 10/Task2.html
+++ b/Day 10/Task2.html
@@ -19,7 +19,7 @@
   <h1>My Brand</h1>
   <ul>
     <li><a href="#">Home</a></li>
-    <li><a href="#about">About</a></li>
+    <li><a href="#">About</a></li>
     <li><a href="#">Services</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
