--- a/Day 12/Task10.html
+++ b/Day 12/Task10.html
@@ -68,7 +68,7 @@
 
     <main>
       <div class="profile">
-        <img src="https://via.placeholder.com/80" alt="Profile">
+        <img src="./Diwali pic 3.jpg" alt="Profile">
         <div>
           <h3>Keerthi Ranjith</h3>
           <p>Web Designer</p>
